# Blender-addon-Full-module-

./: .gitignore  .pre-commit-config.yaml  1_PERCENT_RULE_IMPROVEMENTS.md  ENTERPRISE_FEATURES.md  FINAL_SUMMARY.md  README.md  append_files.cmd  pyproject.toml
.github/workflows/: ci.yml
canvas3d/: __init__.py
canvas3d/core/: __init__.py  enterprise_orchestrator.py  hardware_detector.py  llm_interface.py  orchestrator.py  performance_optimizer.py  telemetry.py
canvas3d/generation/: __init__.py  lighting_system.py  material_generator.py  material_generator_pro.py  post_processing.py  scene_builder.py  spec_executor.py
canvas3d/ui/: __init__.py  frontend_server.py  operators.py  panels.py  preferences.py
canvas3d/ui/frontend/: index.html
canvas3d/utils/: __init__.py  blender_helpers.py  cleanup.py  enhancements.py  exporters.py  material_library.py  spec_validation.py  traversability.py  validation.py
docs/: canvas3d_problems_roadmap.md
docs/schema/: SCHEMA_SUMMARY.md  canvas3d_scene_spec.schema.json
front-end/: App.tsx  README.md  index.html  integrate-addon.js  metadata.json  package-lock.json  package.json  vite.config.ts
front-end/components/: AnalysisDisplay.tsx  ErrorMessage.tsx  Header.tsx  LandingPage.tsx  Loader.tsx  ProjectInput.tsx  PromptingGuideModal.tsx  Tooltip.tsx
front-end/services/: geminiService.ts  prompt-constructor.test.ts  prompt-constructor.ts  types.ts
tests/: test_corpus_specs.py  test_determinism.py  test_scene_builder_cleanup.py  test_spec_executor_atomic.py  test_spec_validation_scene_spec.py  test_traversability.py  test_validation.py  test_validation_ops_and_sandbox.py
tests/corpus/: dungeon_small_room.json
tools/: e2e_llm_probe.py
